# MLFactory

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
deploy/: Dockerfile  Dockerfile.mandala  railway.mandala.toml  railway.toml
deploy/checkpoints/: boop-run50-iter50.pt  boop-run52-iter15.pt  mandala-bootstrap.pt  mandala-cf-bootstrap.pt  mandala-hp-distill-smooth-aux.pt  mandala-hp-distill-smooth.pt  mandala-hp-distill.pt
results/: phase0-scaffold.md  phase1-mcts-baseline.md  phase2-boop-parity.md
scripts/: az-tactical-audit.py  boop-az-smoke-prod.py  boop-az-smoke.py  demo-phase0.sh  demo-phase1.sh  demo-phase2.sh  mandala_eval.py  notify-on-done  run-and-wake  timed  verify-boop-rules.sh
scripts/mandala_parity/: parity_runner.mjs  parity_runner.py  run_parity.py
src/mlfactory/: __init__.py  cli.py
tests/: test_boop_encode.py  test_boop_mcts.py  test_boop_parity.py  test_boop_rules.py  test_boop_symmetry.py  test_connect4.py  test_environment.py  test_random_and_mcts.py
tests/test_alphazero/: test_agent.py  test_boop_integration.py  test_evaluator.py  test_net.py  test_puct.py
tests/test_runner/: test_dummy_trainer.py  test_layout_and_events.py
tests/test_service/: test_app.py  test_boop_adapter.py
tests/test_training/: test_augment.py  test_binomial.py  test_parallel.py  test_replay_buffer.py  test_sample_game.py  test_selfplay.py  test_train_step.py
wiki/: INDEX.md  README.md
wiki/advice/: debugging-rl.md  getting-started.md
wiki/insights/: 2026-04-16-mcts-logarithmic-in-sims.md  2026-04-16-mcts-sign-bug.md  INSIGHTS.md  (+2 more)
(+84 files in other folders)
